--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 .body_all .header_all {
     background-color: #ffa200;
     height: 70px;
+    /* 70px */
     align-items: center;
     display: flex;
 }
