--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 .body_all .header_all {
     background-color: #ffa200;
-    height: 70px;
+    height: 500px;
     /* 70px */
     align-items: center;
     display: flex;
@@ -111,10 +111,9 @@ body {
     background-color: #ffffff;
 }
 
-
-/* .body_all .header_all .header-search form {
-    display: flex;
-} */
+.body_all .header_all .header-search form {
+    margin-left: -380px;
+}
 
 
 /* .body_all .header_all .header-search input {
